# NovaPulse

./: .dockerignore  .env.example  .env.secrets.tpl  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CODEBASE_REVIEW.md  Dockerfile  FinalRep.md  FinalTesting.md  FinishingTouches.md  FirstReview.md  HA_SENTINEL_README.md  HomeStretch.md  LiveRunbook.md  Questions1.md  README.md  REBOOT_CHECKPOINT.md  REBOOT_CHECKPOINT_2026-02-21.md  SuperStart.sh  docker-compose.yml  ha_config.yaml  ha_requirements.txt  main.py  package-lock.json  pyproject.toml  requirements-pi.txt  requirements.txt  stress_test.py
config/: config.yaml
docs/: BILLING.md
ha_agent/: Dockerfile  __init__.py  __main__.py  agent.py  config.py  docker-compose.ha.yml  models.py
knowledge_base/: README.md
load/: README.md  api_dashboard.js  ws_live.js
notes/: NOVA_HORIZON_HANDOFF_2026-02-14.md
payment-form/: index.html  script.js  style.css
preflight/: Feb28.md  Feb28_p2.md  Mar01.md  codexreview.md  deep_4.md  first_4_0_review.md  project_assessment.md  rollout_prep.md
scripts/: health_check.sh  live_preflight.py  log_watch.sh  release_rollback.py  release_snapshot.py  resolve_secrets.sh  secret_scan.sh  vps_watchdog.py  walk_forward_gate.py
src/: __init__.py
static/: cashapp-payment.html  index.html
tests/: conftest.py  test_ai_predictor_status.py  test_anomaly_detector.py  test_bayesian_optimizer.py  test_billing_checkout_plans.py  test_billing_env_overrides.py  test_billing_webhook.py  test_chart_engine_routing.py  test_confluence_guardrails.py  test_control_endpoints.py  (+30 more)
(+207 files in other folders)
